// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CreateUser /> should render 1`] = `
<ModalDialog
  headerText="Create User"
  label="userCreate"
  onExited={[Function]}
>
  <form
    onSubmit={[Function]}
  >
    <Create__CreateUserContainer>
      <InputGroup>
        <Input__InputLabel>
          Username
        </Input__InputLabel>
        <Input
          name="userId"
          onChange={[Function]}
          value=""
        />
        <Input__InputError>
          foo
        </Input__InputError>
      </InputGroup>
      <InputGroup>
        <Input__InputLabel>
          Password
        </Input__InputLabel>
        <PasswordInput
          name="password"
          onChange={[Function]}
          value=""
        />
        <Input__InputError />
      </InputGroup>
      <Checkbox
        checked={false}
        label="Force user to reset password on login"
        onClick={[Function]}
      />
    </Create__CreateUserContainer>
    <Modal__DialogFooter>
      <SaveButton
        pullRight={true}
      />
    </Modal__DialogFooter>
  </form>
</ModalDialog>
`;

exports[`<CreateUser /> should render when name has changed 1`] = `
<ModalDialog
  headerText="Create User"
  label="userCreate"
  onExited={[Function]}
>
  <form
    onSubmit={[Function]}
  >
    <Create__CreateUserContainer>
      <InputGroup>
        <Input__InputLabel>
          Username
        </Input__InputLabel>
        <Input
          name="userId"
          onChange={[Function]}
          value=""
        />
        <Input__InputError>
          foo
        </Input__InputError>
      </InputGroup>
      <InputGroup>
        <Input__InputLabel>
          Password
        </Input__InputLabel>
        <PasswordInput
          name="password"
          onChange={[Function]}
          value=""
        />
        <Input__InputError />
      </InputGroup>
      <Checkbox
        checked={false}
        label="Force user to reset password on login"
        onClick={[Function]}
      />
    </Create__CreateUserContainer>
    <Modal__DialogFooter>
      <SaveButton
        pullRight={true}
      />
    </Modal__DialogFooter>
  </form>
</ModalDialog>
`;

exports[`<CreateUser /> should render when name has changed 2`] = `
<ModalDialog
  headerText="Create User"
  label="userCreate"
  onExited={[Function]}
>
  <form
    onSubmit={[Function]}
  >
    <Create__CreateUserContainer>
      <InputGroup>
        <Input__InputLabel>
          Username
        </Input__InputLabel>
        <Input
          name="userId"
          onChange={[Function]}
          value="bob"
        />
        <Input__InputError>
          foo
        </Input__InputError>
      </InputGroup>
      <InputGroup>
        <Input__InputLabel>
          Password
        </Input__InputLabel>
        <PasswordInput
          name="password"
          onChange={[Function]}
          value=""
        />
        <Input__InputError />
      </InputGroup>
      <Checkbox
        checked={false}
        label="Force user to reset password on login"
        onClick={[Function]}
      />
    </Create__CreateUserContainer>
    <Modal__DialogFooter>
      <SaveButton
        pullRight={true}
      />
    </Modal__DialogFooter>
  </form>
</ModalDialog>
`;

exports[`<CreateUser /> should render when password has changed 1`] = `
<ModalDialog
  headerText="Create User"
  label="userCreate"
  onExited={[Function]}
>
  <form
    onSubmit={[Function]}
  >
    <Create__CreateUserContainer>
      <InputGroup>
        <Input__InputLabel>
          Username
        </Input__InputLabel>
        <Input
          name="userId"
          onChange={[Function]}
          value=""
        />
        <Input__InputError>
          foo
        </Input__InputError>
      </InputGroup>
      <InputGroup>
        <Input__InputLabel>
          Password
        </Input__InputLabel>
        <PasswordInput
          name="password"
          onChange={[Function]}
          value=""
        />
        <Input__InputError />
      </InputGroup>
      <Checkbox
        checked={false}
        label="Force user to reset password on login"
        onClick={[Function]}
      />
    </Create__CreateUserContainer>
    <Modal__DialogFooter>
      <SaveButton
        pullRight={true}
      />
    </Modal__DialogFooter>
  </form>
</ModalDialog>
`;

exports[`<CreateUser /> should render when password has changed 2`] = `
<ModalDialog
  headerText="Create User"
  label="userCreate"
  onExited={[Function]}
>
  <form
    onSubmit={[Function]}
  >
    <Create__CreateUserContainer>
      <InputGroup>
        <Input__InputLabel>
          Username
        </Input__InputLabel>
        <Input
          name="userId"
          onChange={[Function]}
          value=""
        />
        <Input__InputError>
          foo
        </Input__InputError>
      </InputGroup>
      <InputGroup>
        <Input__InputLabel>
          Password
        </Input__InputLabel>
        <PasswordInput
          name="password"
          onChange={[Function]}
          value="password"
        />
        <Input__InputError />
      </InputGroup>
      <Checkbox
        checked={false}
        label="Force user to reset password on login"
        onClick={[Function]}
      />
    </Create__CreateUserContainer>
    <Modal__DialogFooter>
      <SaveButton
        pullRight={true}
      />
    </Modal__DialogFooter>
  </form>
</ModalDialog>
`;
